# laio-cli

./: .editorconfig  .envrc  .gitignore  .laio-test.yaml  .laio.yaml  .laio.yaml.example  .rmux.yaml  .rmx.yaml  404.html  CNAME  Cargo.toml  MIGRATION_PLAN.md  Makefile  README.md  devshell.toml  flake.nix  index.html  result-1  rmx.nix  robots.txt  search_index.en.js  simple-test.yaml  sitemap.xml  test-async-execution.yaml  test-mixed-sleep.yaml  test-simple-mixed.yaml  test-timing.yaml  test.kdl
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/package-data/: action.yaml
.github/actions/release/: action.yaml
.github/actions/upload/: action.yaml
.github/actions/version/: action.yaml
.github/workflows/: build.yaml  ci.yaml  dependabot-auto-merge.yaml  docs.yaml  flakehub-publish-tagged.yml  flakestry-publish-tag.yaml  foo.yaml  main.yaml  preflight.yaml  release-bak.yaml  release.yaml  renovate.json  renovate.yaml  snapshot.yaml  test.yaml  update-flake-lock.yaml  upload.yaml
Formula/: laio.rb
data/: aarch64-darwin.json  aarch64-linux.json  x86_64-linux.json
docs/: config.toml  index.html
docs/configuration/: index.html
docs/configuration/layouts/: index.html
docs/configuration/lifecycle/: index.html
docs/configuration/yaml-reference/: index.html
docs/content/: _index.md
docs/content/docs/: _index.md
docs/getting-started/: index.html
docs/getting-started/advanced/: index.html
docs/getting-started/basics/: index.html
docs/getting-started/installing/: index.html
docs/getting-started/quick-start/: index.html
docs/getting-started/your-first-session/: index.html
docs/reference/: index.html
docs/reference/cli-commands/: index.html
docs/templates/: index.html
docs/workflow/: index.html
docs/workflow/local-configs/: index.html
docs/workflow/managing-configs/: index.html
docs/workflow/session-export/: index.html
examples/: template-poc.yaml
mcp-tools/: README.md  tmux.nu
nix/: build.nix  complete.nix  default.nix  fenix.nix  install.nix  lib.nix  packages.nix  rmx.nix  utils.nix
nix/data/: aarch64-darwin.json  aarch64-darwin.yaml  aarch64-linux.json  aarch64-linux.yaml  x86_64-darwin.json  x86_64-darwin.yaml  x86_64-linux.json  x86_64-linux.yaml
nix/devenv/: ci.nix  developer.nix
src/: lib.rs  main.rs
src/app/: cmd.rs  cmd_test.rs  config.rs  mod.rs  parser.rs  tmux.rs  tmux_client.rs  tmux_client_test.rs  tmux_test.rs
src/app/cli/: command_line.rs  command_line_test.rs  completion.rs  mod.rs
src/app/cmd/: mod.rs  test.rs
src/app/config/: mod.rs
src/app/manager/: config.rs  config_test.rs  mod.rs  session.rs  session_test.rs  tmpl.yaml
src/app/tmux/: client.rs  client_test.rs  mod.rs  test.rs
src/cli/: cli.rs  command_line.rs  completion.rs  mod.rs
src/cli/config/: cli.rs
src/cli/session/: cli.rs
src/cmd/: mod.rs
src/commands/: cli.rs  complete.rs  completion.rs  mod.rs
src/commands/config/: cli.rs
src/commands/session/: cli.rs  mod.rs  session.rs
src/common/: mod.rs  path.rs  session_info.rs  validation.rs
src/common/cmd/: cmd.rs  mod.rs  (+3 more)
src/driver/: drivers.rs  mod.rs
src/muxer/: mod.rs
src/rmux/: cli.rs  config.rs  mod.rs  mod_bak.rs  parser.rs  rmux.yaml
src/rmx/: cli.rs  config.rs  mod.rs  rmx.rs
src/tmux/: client.rs  mod.rs  mux.rs  test.rs
src/util/: mod.rs  path.rs  validation.rs
(+96 files in other folders)
