[package]
name = "laio"
version = "0.15.0"
edition = "2021"
description = "A simple flexbox-like layout manager for tmux."
homepage = "https://github.com/ck3mp3r/laio-cli"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"
strip = "symbols"

[dependencies]
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.62"
clap_complete_nushell = "4.5.10"
crossterm = "0.29.0"
env_logger = "0.11.8"
inquire = "0.9.1"
lazy_static = "1.5.0"
log = "0.4.29"
regex = "1.12.2"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sysinfo = "0.37.2"
tabled = "0.20.0"

[dependencies.tokio]
version = "1.48.0"
features = [
    "rt-multi-thread",
    "macros",
    "time",
]

[dependencies.clap]
version = "4.5.53"
features = ["derive"]

[dependencies.kdl]
version = "6.5.0"
features = ["v1"]

[dependencies.miette]
version = "7.6.0"
features = ["fancy"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_valid]
version = "2.0.0"
features = ["yaml"]

[dev-dependencies]
lazy_static = "1.5.0"
mockall = "0.14.0"
