[package]
name = "laio"
version = "0.15.1"
edition = "2021"
description = "A simple flexbox-like layout manager for tmux."
homepage = "https://github.com/ck3mp3r/laio-cli"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"
strip = "symbols"

[dependencies]
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.66"
clap_complete_nushell = "4.5.10"
crossterm = "0.29.0"
env_logger = "0.11.9"
inquire = "0.9.3"
lazy_static = "1.5.0"
log = "0.4.29"
regex = "1.12.3"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sysinfo = "0.38.2"
tabled = "0.20.0"
tera = "1.20.1"

[dependencies.tokio]
version = "1.48.0"
features = [
    "rt-multi-thread",
    "macros",
    "time",
]

[dependencies.clap]
version = "4.5.58"
features = ["derive"]

[dependencies.kdl]
version = "6.5.0"
features = ["v1"]

[dependencies.miette]
version = "7.6.0"
features = ["fancy"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_valid]
version = "2.0.1"
features = ["yaml"]

[dev-dependencies]
lazy_static = "1.5.0"
mockall = "0.14.0"
