[package]
name = "laio"
version = "0.17.0"
edition = "2024"
description = "A simple flexbox-like layout manager for tmux."
homepage = "https://github.com/ck3mp3r/laio-cli"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"
strip = "symbols"

[dependencies]
clap-verbosity-flag = "3.0.4"
clap_complete = "4.6.5"
clap_complete_nushell = "4.6.0"
crossterm = "0.29.0"
env_logger = "0.11.10"
inquire = "0.9.4"
lazy_static = "1.5.0"
log = "0.4.32"
regex = "1.12.3"
serde_json = "1.0.150"
sha2 = "0.11.0"
sysinfo = "0.38.4"
tabled = "0.21.0"
tera = "1.20.1"
urlencoding = "2.1.3"

[dependencies.noyalib]
version = "0.0.7"
features = ["compat-serde-yaml"]

[dependencies.clap]
version = "4.6.1"
features = ["derive"]

[dependencies.kdl]
version = "6.5.0"
features = ["v1"]

[dependencies.miette]
version = "7.6.0"
features = ["fancy"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dev-dependencies]
lazy_static = "1.5.0"
mockall = "0.14.0"
